tests/errors/sem.all-args-required.nonconst-call.or
main :: () -> void {
    x := (a: int, b: int) -> int {
        return a = b;
    };

    x();
};
